# gnss-ir-nz

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build-pdf.yaml
arduino-code/: ard_mkr_gps.ino  platformio.ini
arduino-code/src/: Dropbox.cpp  Dropbox.h  arduino_secrets.h.example  dropbox.cpp  dropbox.h  main.cpp  main.h  thingProperties.h
data/: example.csv
matlab/: readGPS.m  read_gpgsv.m  sample_gnss_irdkm.m
matlab/lsp-version/: get_ofac_hifac.m  lomb.m  peak2noise.m  quicky_QC.m  readGPS.m  read_gpgsv.m  sample_gnss_irLSP.m
notebooks/: dropbox_credentials.ipynb  dropbox_download.ipynb  gnssrefl.ipynb
python/: config.ini  hourly_compress.py  ideas.md  lombscargle.py  matlab_translate.py  nema-parser.ipynb  process_gnss.py  readGPS.py  read_gpgsv.py  utils.py
python/.ipynb_checkpoints/: nema-parser-checkpoint.ipynb
python/dropbox/: main.py
tutorial/: index.md  parts-list.xlsx
